Reworked the ANY match ("*") to support more general field specifiers like "6*" (any 6XX field).

--- a/public/index.html
+++ b/public/index.html
@@ -234,6 +234,7 @@
         <li><span class="tagexample">245$a</span> &#8212 subfield $a of any 245 field</li>
         <li><span class="tagexample">245!01$a</span> &#8212 subfield $a of any 245 field whose first indicator is "0" and whose second indicator is "1"</li>
         <li><span class="tagexample">245!0#$a</span> &#8212 subfield $a of any 245 field whose first indicator is "0" and whose second indicator is any value</li>
+        <li><span class="tagexample">6*</span>&#8212 any 6XX field in the record</li>
         <li><span class="tagexample">*</span>&#8212 any field in the record</li>
       </ul>
 
