Show more timing information

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
       <table id="job_list">
         <tr>
           <th>Query</th>
-          <th>Submitted at</th>
+          <th>Timing</th>
           <th>Status</th>
           <th>&nbsp;</th>
           <th>&nbsp;</th>
