--- a/public/index.html
+++ b/public/index.html
@@ -117,20 +117,23 @@
 
       <div class="choose_output">
         <h3>Choose an output option...</h3>
-        <div class="output_options">
-        </div>
+          <div class="output_options">
+            <div class="send_output_to">Send the output of my job to</div>
+          </div>
       </div>
 
       <div id="submit_button" class="submit_button">
         <h3>Submit your job</h3>
-        <input id="submit" type="button" value="Submit job"/>
-        <input id="clear" type="button" value="Clear form"/>
-        <div id="added_job" style="display: none;" class="tip">
-          <h5>Hooray!</h5>
-          <p>You can repeat this step as many times as you like to
-            submit more jobs.</p>
+        <div class="container">
+          <input id="submit" type="button" value="Submit job"/>
+          <input id="clear" type="button" value="Clear form"/>
+          <div id="added_job" style="display: none;" class="tip">
+            <h5>Hooray!</h5>
+            <p>You can repeat this step as many times as you like to
+              submit more jobs.</p>
 
-          <p>When you click the <em>"Run all jobs"</em> button below it will run all of your jobs at once.</p>
+            <p>When you click the <em>"Run all jobs"</em> button below it will run all of your jobs at once.</p>
+          </div>
         </div>
       </div>
     </div>
