More style tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <h3>Define your query...</h3>
         <div class="define_query">
           <div class="choose_source">
-            <span class="label source_label">Find all the records in</span>
+            <div class="label source_label">Find all the records in...</div>
             <div class="source_options source_options_style">
             </div>
 
@@ -127,7 +127,7 @@
         <div class="choose_output">
           <h3>Choose an output option...</h3>
             <div class="output_options">
-              <div class="send_output_to">Send the output of my job to</div>
+              <div class="label send_output_to_label">Send records matching my query to...</div>
             </div>
         </div>
 
