JS and CSS version bump

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
   <head>
     <link type="text/css" href="css/flick/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />	
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css?v=1322019962" />
 
     <script src="js/jquery-1.6.2.min.js"></script>
     <script src="js/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="js/json2.js"></script>
-    <script src="js/marcgrep.js?v=1321936377"></script>
+    <script src="js/marcgrep.js?v=1322019962"></script>
   </head>
 
   <body>
