Show the bulb icon on the tip after adding a job.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <div class="marcgrep_container">
 
-      <div class="blurb">
+      <div id="top_blurb" class="blurb">
         <img class="bulb" src="bulb-small.png" />
         <div class="blurb_text">
           <p>MARCgrep is a tool for searching MARC data.</p>
@@ -137,11 +137,14 @@
             <input id="submit" type="button" value="Submit job"/>
             <input id="clear" type="button" value="Clear form"/>
             <div id="added_job" style="display: none;" class="tip">
+              <img class="bulb" src="bulb-small.png" />
               <h5>Hooray!</h5>
-              <p>You can repeat this step as many times as you like to
-                submit more jobs.</p>
+              <div class="blurb_text">
+                <p>You can repeat this step as many times as you like to
+                  submit more jobs.</p>
 
-              <p>When you click the <em>"Run all jobs"</em> button below it will run all of your jobs at once.</p>
+                <p>When you click the <em>"Run all jobs"</em> button below it will run all of your jobs at once.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -457,6 +460,7 @@
             $('select').change(function (evt) { update_form(); });
 
             $('#submit').click(function (evt) {
+                $('#top_blurb').css('visibility', 'hidden');
                 $('#added_job').slideDown(250);
 
                 var query = generate_query();
