--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
   <head>
     <link type="text/css" href="css/flick/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />	
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css?v=1322433870" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css?v=13224338701" />
 
     <script src="js/jquery-1.6.2.min.js"></script>
     <script src="js/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="js/json2.js"></script>
-    <script src="js/marcgrep.js?v=1322433870"></script>
+    <script src="js/marcgrep.js?v=13224338701"></script>
   </head>
 
   <body>
@@ -408,8 +408,6 @@
         <p>Dreadfully sorry about all of this!</p>
       </div>
 
-
-
       <script>
         $(function () {
             <!-- Wire up the buttons -->
@@ -504,5 +502,11 @@
         });
       </script>
     </div>
+
+
+    <div class="bottom_bar">
+      Questions?  Ideas?  <span class="github_link">&rarr;  <a href="https://github.com/marktriggs/marcgrep">Visit MARCgrep online</span></a>
+    </div>
+
   </body>
 </html>
